# lobs-py-aula0

./: pyproject.toml
